--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/ktywelch/createReadme#readme",
   "dependencies": {
+    "fuzzy": "^0.1.3",
     "inquirer": "^7.3.3",
     "util": "^0.12.3"
-  }
+  },
+  "devDependencies": {}
 }
